--- a/pom.xml
+++ b/pom.xml
@@ -42,13 +42,21 @@
 		<dependency>
     		<groupId>org.jasig.portal</groupId>
     		<artifactId>uPortal-soffit-renderer</artifactId>
-    	<version>5.4.0</version>
+    		<version>5.4.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
- 
+
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-webflux</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
