Refactoring + calcul du nombre element par rank

--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,23 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			<plugin>
+				<groupId>org.lesscss</groupId>
+			    <artifactId>lesscss-maven-plugin</artifactId>
+			    <version>1.7.0.1.1</version>
+			    <configuration>
+			        <sourceDirectory>${project.basedir}/src/main/resources/static/less</sourceDirectory>
+			        <outputDirectory>${project.basedir}/src/main/resources/static/css</outputDirectory>
+			        <compress>false</compress>
+			    </configuration>
+			    <executions>
+			        <execution>
+			            <goals>
+			                <goal>compile</goal>
+			            </goals>
+			        </execution>
+			    </executions>
+			</plugin>
 		</plugins>
 	</build>
 
