--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,7 +14,7 @@ server:
     
 soffit:
   # jwt.signatureKey: 
-  anonymous.acces: /api/hello
+  anonymous.acces: /api/menu
  
 test:
   no-web-service: true
