--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  address: localhost
+  address: 192.168.45.196
   port: 8443
   ssl:
     enabled: true
@@ -14,14 +14,14 @@ server:
     
 soffit:
   # jwt.signatureKey: 
-  anonymous.acces: /api/menu
+  anonymous.acces: /api/lastmenu
 
 adoria:
   url: https://api.adoria.com/Api/EProduction/CycleMenu/GetCycleMenusForEnt
   # client-key: 
   # guid: 
   test:
-    no-web-service: false
+    no-web-service: true
     format-fileName: classpath:static/test/menuTest%d.json
  
 logging:
