--- a/src/main/java/META-INF/additional-spring-configuration-metadata.json
+++ b/src/main/java/META-INF/additional-spring-configuration-metadata.json
@@ -33,5 +33,15 @@
     "name": "adoria.guid",
     "type": "java.lang.String",
     "description": "uid du groupe adoria"
+  },
+  {
+    "name": "soffit.anonymous.getacces",
+    "type": "java.lang.String",
+    "description": "A description for 'soffit.anonymous.getacces'"
+  },
+  {
+    "name": "soffit.anonymous.postacces",
+    "type": "java.lang.String",
+    "description": "A description for 'soffit.anonymous.postacces'"
   }
 ]}
