--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 	</parent>
 	<groupId>fr.recia</groupId>
 	<artifactId>menu-cantine</artifactId>
-	<version>0.2.2-SNAPSHOT</version>
+	<version>0.2.3-SNAPSHOT</version>
 	<packaging>war</packaging>
 	<name>menu-cantine</name>
 	<description>Service rest pour les menus de cantine</description>
@@ -17,6 +17,38 @@
 	<properties>
 		<java.version>1.8</java.version>
 	</properties>
+	<repositories>
+   <repository>
+      <id>spring-snapshots</id>
+      <name>Spring Snapshots</name>
+      <url>https://repo.spring.io/snapshot</url>
+      <snapshots>
+         <enabled>true</enabled>
+      </snapshots>
+   </repository>
+   <repository>
+      <id>spring-milestones</id>
+      <name>Spring Milestones</name>
+      <url>https://repo.spring.io/milestone</url>
+   </repository>
+</repositories>
+<pluginRepositories>
+   <pluginRepository>
+      <id>spring-snapshots</id>
+      <name>Spring Snapshots</name>
+      <url>https://repo.spring.io/snapshot</url>
+      <snapshots>
+         <enabled>true</enabled>
+      </snapshots>
+   </pluginRepository>
+   <pluginRepository>
+      <id>spring-milestones</id>
+      <name>Spring Milestones</name>
+      <url>https://repo.spring.io/milestone</url>
+   </pluginRepository>
+</pluginRepositories>
+	
+	
 	<distributionManagement>
         <repository>
             <id>esco-releases</id>
