--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
 
 	<properties>
 		<java.version>1.8</java.version>
+		<login.ent>pierre.legay</login.ent>
 	</properties>
 	<repositories>
    <repository>
@@ -60,8 +61,8 @@
         </snapshotRepository>
     </distributionManagement>
     <scm>
-        <connection>scm:git:ssh://pierre.legay@git.recia.fr:/srv/git/shared/menu-cantine-web-service.git</connection>
-        <developerConnection>scm:git:ssh://pierre.legay@git.recia.fr:/srv/git/shared/menu-cantine-web-service.git</developerConnection>
+        <connection>scm:git:ssh://${login.ent}@git.recia.fr/srv/git/shared/menu-cantine-web-service.git</connection>
+        <developerConnection>scm:git:ssh://${login.ent}@git.recia.fr/srv/git/shared/menu-cantine-web-service.git</developerConnection>
         <tag>HEAD</tag>
     </scm>
 	<dependencies>
