--- a/src/main/java/META-INF/additional-spring-configuration-metadata.json
+++ b/src/main/java/META-INF/additional-spring-configuration-metadata.json
@@ -48,5 +48,10 @@
     "name": "adoria.gemrcn-csv",
     "type": "java.lang.String",
     "description": "fichier.csv de nomenclature GemRcn complémentaire."
+  },
+  {
+    "name": "adoria.labels-csv",
+    "type": "java.lang.String",
+    "description": "A description for 'adoria.labels-csv'"
   }
 ]}
