feat: système complet de cache
- cache permanent pour les requêtes sur une date passée

- cache non permanent pour les requêtes sur une date future

--- a/pom.xml
+++ b/pom.xml
@@ -120,7 +120,7 @@
 			<artifactId>cache-api</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.ehcache</groupId>
+			<groupId>net.sf.ehcache</groupId>
 			<artifactId>ehcache</artifactId>
 		</dependency>
 		<dependency>
