--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -50,3 +50,31 @@ logging:
 spring:
   cache:
     type: ehcache
+
+mapper:
+  services:
+    '[Petit déjeuner]': 1
+    '[Déjeuner]': 2
+    '[Goûter]': 3
+    '[Dîner]': 4
+  sousmenus:
+    entree:
+      nom: "Entrée"
+      numero: 1
+    plat:
+      nom: "Plat"
+      numero: 2
+    accompagnement:
+      nom: "Accompagnement"
+      numero: 3
+    fromage:
+      nom: "Fromage"
+      numero: 4
+    dessert:
+      nom: "Dessert"
+      numero: 5
+    autre:
+      nom: "Autre"
+      numero: 6
+
+
