chore: changement login git pour pouvoir commit avec maven

--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
 
 	<properties>
 		<java.version>1.8</java.version>
-		<login.ent>pierre.legay</login.ent>
+		<login.ent>nathan.cailbourdin</login.ent>
 	</properties>
 	<repositories>
 		<repository>
