feat: mapping d'un UAI par un autre

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -27,6 +27,10 @@ spring:
   cache:
     type: ehcache
 
+uais:
+  regroupements:
+    "0450822X": "0281197Z"
+
 mapper:
   services:
     '[Petit déjeuner]': 1
@@ -44,7 +48,7 @@ mapper:
       nom: "Accompagnement"
       numero: 3
     fromage:
-      nom: "Fromage"
+      nom: "Laitage"
       numero: 4
     dessert:
       nom: "Dessert"
