--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 	</parent>
 	<groupId>fr.recia</groupId>
 	<artifactId>menu-cantine</artifactId>
-	<version>1.0.3</version>
+	<version>1.0.4-SNAPSHOT</version>
 	<packaging>war</packaging>
 	<name>menu-cantine</name>
 	<description>Service rest pour les menus de cantine</description>
@@ -62,7 +62,7 @@
 	<scm>
 		<connection>scm:git:ssh://git@github.com/GIP-RECIA/menu-cantine-web-service.git</connection>
 		<developerConnection>scm:git:ssh://git@github.com/GIP-RECIA/menu-cantine-web-service.git</developerConnection>
-		<tag>menu-cantine-1.0.3</tag>
+		<tag>HEAD</tag>
 		<url>https://github.com/GIP-RECIA/menu-cantine-web-service.git</url>
 	</scm>
 	<dependencies>
